[tool.poetry]
name = "ciphersweet"
version = "0.1.0"
description = "Python implementation of ciphersweet"
authors = ["J. Ryan Littlefield <ryan@ryanlittlefield.com>"]
readme = 'README.md'
repository = "https://github.com/rlittlefield/pyciphersweet"
license = "MIT"


[tool.poetry.dependencies]
python = "*"
pysodium = "^0.7.0"
cryptography = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
